--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,10 @@
 /checkouts
 pom.xml
 pom.xml.asc
-*.jar
 *.class
 .lein-deps-sum
 .lein-failures
 .lein-plugins
 .lein-repl-history
+.nrepl-port
+*.DS_Store
